--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <div id="fog" style="position: absolute; height: 100vh; width: 100%; left: 0; top: 0;"></div>
 <div id="root"></div>
 <script type="module" src="/src/main.tsx"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.halo.min.js"></script>
-<!--<script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>-->
+<script src="/animation/three.min.js"></script>
+<script src="/animation/vanta.halo.min.js"></script>
 
 <script>
   VANTA.HALO({
@@ -22,9 +21,10 @@
     gyroControls: false,
     minHeight: 200.00,
     minWidth: 200.00,
-    baseColor: 0x591a00,
-    backgroundColor: 0x431329,
     amplitudeFactor: 1.90,
+    highlightColor: 0xa4978e,
+    lowlightColor: 0x743e2d,
+    baseColor: 0x15110f,
     size: 1.90
   })
 </script>
