--- a/index.html
+++ b/index.html
@@ -1,32 +1,23 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Vite + React + TS</title>
-</head>
-<body>
-<div id="fog" style="position: absolute; height: 100vh; width: 100%; left: 0; top: 0;"></div>
-<div id="root"></div>
-<script type="module" src="/src/main.tsx"></script>
-<script src="/animation/three.min.js"></script>
-<script src="/animation/vanta.halo.min.js"></script>
 
-<script>
-  VANTA.HALO({
-    el: "#fog",
-    mouseControls: true,
-    touchControls: true,
-    gyroControls: false,
-    minHeight: 200.00,
-    minWidth: 200.00,
-    amplitudeFactor: 1.90,
-    highlightColor: 0xa4978e,
-    lowlightColor: 0x743e2d,
-    baseColor: 0x15110f,
-    size: 1.90
-  })
-</script>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>The Sound of Pomegranates</title>
+</head>
+
+<body>
+  <div id="fog" style="position: absolute; height: 100vh; width: 100%; left: 0; top: 0;">
+    <main>
+    </main>
+  </div>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+  <script src="/animation/p5.min.js"></script>
+  <script src="/animation/sketch.js"></script>
+
 </body>
+
 </html>
