Update poster (drone day)

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
   <script src="/animation/p5.min.js"></script>
   <script src="/animation/sketch.js"></script>
 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-V5G34172WQ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-V5G34172WQ');
+  </script>
 </body>
 
 </html>
