[update 2] Live stream

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   </div>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
-  <script src="/animation/p5.min.js"></script>
-  <script src="/animation/sketch.js"></script>
+<!--  <script src="/animation/p5.min.js"></script>-->
+<!--  <script src="/animation/sketch.js"></script>-->
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-V5G34172WQ"></script>
   <script>
